# movetk

./: .gitignore  .gitmodules  .ort.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  ci.cmd  ci.sh  conanfile.py  conanfile.txt  vcpkg.json
docs/: CMakeLists.txt  CNAME  movetk-doxy-config.cfg  movetk.tag
docs/html/: _algorithm_traits_8h.html  _algorithm_traits_8h_source.html  _algorithms_8h_source.html  _asserts_8h.html  _asserts_8h_source.html  _boost_geometry_traits_8h_source.html  _boost_geometry_wrapper_8h_source.html  _brownian_bridge_8h.html  _brownian_bridge_8h_source.html  _c_g_a_l_traits_8h.html  _c_g_a_l_traits_8h_source.html  _c_g_a_l_wrapper_8h_source.html  _cartesian_probe_traits_8h_source.html  _categorical_field_8h_source.html  _clustering_8h_source.html  _coloured_geo_j_s_o_n_utils_8h_source.html  _columnar_trajectory_8h_source.html  _coresets_8h_source.html  _distance_interface_8h_source.html  _distance_traits_8h_source.html  _distances_8h_source.html  _documentation_8h_source.html  _form0.eps  _form0.ps  _formulas.dvi  _formulas.tex  _free_space_diagram_8h_source.html  _geo_j_s_o_n_utils_8h_source.html  _geolife_8h_source.html  _geolife_probe_traits_8h_source.html  _geolife_trajectory_traits_8h_source.html  _geom_backend_design.html  _geometry_backend_traits_8h_source.html  _geometry_interface_8h_source.html  _here_probe_traits_8h_source.html  _here_trajectory_traits_8h_source.html  _high_frequency_trajectory_reader_8h_source.html  _high_frequency_trajectory_splitter_8h_source.html  _high_frequency_trajectory_traits_8h_source.html  _interpolation_8h_source.html  (+597 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  (+63 more)
docs/latex/: _algorithm_traits_8h.tex  _asserts_8h.tex  _brownian_bridge_8h.tex  _c_g_a_l_traits_8h.tex  _geom_backend_design.tex  _iterators_8h.tex  _requirements_8h.tex  _search_8h.tex  _segmentation_8h.tex  _segmentation_predicates_8h.tex  _segmentation_traits_8h.tex  _start_stop_matrix_8h.tex  _string_utils_8h.tex  _trajectory_utils_8h.tex  _tree_8h.tex  annotated.tex  bibTmpFile_1.bib  citelist.tex  class_columnar_trajectory.tex  class_csv_probe_reader.eps  class_csv_probe_reader.tex  class_gdal_polygon_reader.tex  class_high_frequency_trajectory_reader.eps  class_high_frequency_trajectory_reader.tex  class_high_frequency_trajectory_splitter.tex  class_high_frequency_trajectory_splitter_1_1iterator.tex  class_parse_date.eps  class_parse_date.tex  class_probe_reader.eps  class_probe_reader.tex  class_probe_reader_factory.tex  class_s_e_b___n_a_m_e_s_p_a_c_e_1_1_logger.tex  class_s_e_b___n_a_m_e_s_p_a_c_e_1_1_point.tex  class_s_e_b___n_a_m_e_s_p_a_c_e_1_1_smallest__enclosing__ball.tex  class_s_e_b___n_a_m_e_s_p_a_c_e_1_1_subspan.tex  class_s_e_b___n_a_m_e_s_p_a_c_e_1_1_timer.tex  class_sort_by_field.tex  class_sorted_probe_reader.tex  class_split_by_difference_threshold.tex  class_split_by_distance_threshold.tex  (+273 more)
docs/pages/: backend-design.md  introduction.md
documentation/: CMakeLists.txt  README.md  build-documentation.py  movetk-doxy-config.cfg  movetk-doxy-config.cfg.in  movetk.bib
documentation/extra_pages/: agarwal.md
documentation/pages/: backend-design.md  introduction.md
documentation/resources/: bibliography.js  bibliography.js.in  citationjs.js
documentation/templates/: footer.html  header.html  layout.xml  layout.xml.in
examples/: CMakeLists.txt  compute_squared_distance.cpp  compute_statistics.cpp  creating_geometry.cpp  curves_intersections.cpp  directed_graph.cpp  douglas_peucker_simplification.cpp  geolife_count_probes.cpp  geolife_distance_heading.cpp  interpolation.cpp  kinematic_interpolation.cpp  linear_interpolation.cpp  make_line.cpp  make_min_sphere.cpp  make_point.cpp  make_polygon.cpp  make_segment.cpp  make_sphere.cpp  model_based_segmentation.cpp  monotone_segmentation.cpp  outlier_detection.cpp  probe2trajectories.cpp  probe2wkt.cpp  rawprobe2trajectories.cpp  read_trajectories.cpp  segment_by_heading.cpp  segment_by_meb.cpp  segment_by_speed.cpp  segment_by_velocity.cpp  simplification.cpp  trajectories_polygon_intersection.cpp  trajectory_sampler.cpp  trajectory_segmentation.cpp  write_geojson.cpp
examples/include/: ExampleSetup.h  GeolifeProbeTraits.h  GeolifeTrajectoryTraits.h  GeometryBackendTraits.h  HereProbeTraits.h  HereTrajectoryTraits.h  Timer.h  test_data.h
py/: CMakeLists.txt  movetk_geometry.cpp
py/PyMoveTk/: Distances.h  Geometry.h  Include.h  PyMoveTk.cpp  Similarity.h  Simplification.h
py/test/: CMakeLists.txt  PyMoveTk_test.py  TestAgarwal.py  TestHelpers.py
src/: CMakeLists.txt  logging.cpp  vcpkg_response_file.txt
src/geo/: geo.cpp
src/io/: gdal_PolygonReader.cpp
src/utils/: text.cpp
tests/: CMakeLists.txt  test_LCS.cpp  test_agarwal.cpp  test_brownian_bridge.cpp  test_categorical_field.cpp  test_chan_chin.cpp  test_clustering.cpp  test_continuous_hausdorff.cpp  test_csv.cpp  test_discrete_frechet.cpp  test_discrete_hausdorff.cpp  test_douglas_peucker.cpp  test_dynamic_time_warping.cpp  test_free_space_diagram.cpp  test_geo.cpp  test_geojson.cpp  test_imai_iri.cpp  test_includes.h  test_interpolation.cpp  test_intersection.cpp  test_mbr.cpp  test_model_based_segmentation.cpp  test_norm.cpp  test_outlier_detection.cpp  test_polyline_utils.cpp  test_probe_point.cpp  test_rows2cols.cpp  test_seb.cpp  test_splitter.cpp  test_squared_distance.cpp  test_strong_frechet.cpp  test_trajectory.cpp  test_trajectory_gdal.cpp  test_trajectory_statistics.cpp  test_trajectory_utils.cpp  test_tree.cpp  test_tuple_subsetting.cpp  test_weak_frechet.cpp  test_wedge.cpp  tests_main.cpp
tests/data/: agarwal_simplification_tests.xml  discretehausdorff_tests.json  discretehausdorff_tests.xml  douglaspeucker_tests.json  douglaspeucker_tests.xml  strong_frechet_tests.xml  weak_frechet_tests.xml  wedge_tests.json  wedge_tests.xml
tests/helpers/: CustomCatchTemplate.h  TestJsonReader.h
(+191 files in other folders)
